--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <link rel="stylesheet" href="./resources/qgis2web.css">
 <style>
 .search-layer {
-  top: 65px;
+  top: 100px;
   left: .5em;
 }
 .ol-touch .search-layer {
-  top: 80px;
+  top: 130px;
 }
 </style>
         <style>
@@ -42,6 +42,47 @@
             color: black !important;
         }
         </style>
+<style>
+.tooltip {
+  position: relative;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  color: white;
+  padding: 4px 8px;
+  opacity: 0.7;
+  white-space: nowrap;
+}
+.tooltip-measure {
+  opacity: 1;
+  font-weight: bold;
+}
+.tooltip-static {
+  background-color: #ffcc33;
+  color: black;
+  border: 1px solid white;
+}
+.tooltip-measure:before,
+.tooltip-static:before {
+  border-top: 6px solid rgba(0, 0, 0, 0.5);
+  border-right: 6px solid transparent;
+  border-left: 6px solid transparent;
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  margin-left: -7px;
+  left: 50%;
+}
+.tooltip-static:before {
+  border-top-color: #ffcc33;
+}
+.measure-control {
+  top: 65px;
+  left: .5em;
+}
+.ol-touch .measure-control {
+  top: 80px;
+}
+</style>
         <style>
         html, body, #map {
             width: 100%;
